--- a/styles/root.css
+++ b/styles/root.css
@@ -16,5 +16,6 @@
     --color-4: #A4EAF5;
     --color-5: #9DEBE0;
     --color-icon: #ffffff;
+    --blur-color: #9da3eb70;
     --fuente: "Poppins";
 }
