--- a/panel/modal.css
+++ b/panel/modal.css
@@ -76,14 +76,99 @@
 }
 
 .profile-modal .modal-content .pass-confirm {
+    width: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
 }
 
+.profile-modal .modal-content .pass-confirm form {
+    width: 80%;
+    margin-top: 30px;
+}
+
 .profile-modal .modal-content .pass-confirm .input {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    width: 100%;
     justify-content: center;
+    margin-top: 10px;
+}
+
+.profile-modal .modal-content .pass-confirm label {
+    font-family: var(--fuente);
+    font-size: 20px;
+}
+
+.profile-modal .modal-content .pass-confirm .input input {
+    font-family: var(--fuente);
+    outline: none;
+    width: 100%;
+    padding: 20px 30px;
+    font-size: 20px;
+    border: none;
+    border-radius: 20px 0 0 20px;
+}
+
+.profile-modal .modal-content .pass-confirm .input .eye {
+    background-color: var(--color-1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0 20px 20px 0;
+    min-width: 15%;
+    transition: .25s ease;
+}
+
+.profile-modal .modal-content .pass-confirm .input .eye button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    padding: 0 10px;
+    cursor: pointer;
+}
+
+.profile-modal .modal-content .pass-confirm .input .eye svg {
+    stroke: var(--color-icon);
+    width: 40px;
+    transform: rotate(40deg);
+    transition: .25s ease;
+}
+
+.profile-modal .modal-content .pass-confirm .input .eye svg path, .profile-modal .modal-content .pass-confirm .input .eye .svgEyeLash svg path {
+    fill: var(--color-icon);
+    width: 100%;
+}
+
+.profile-modal .modal-content .pass-confirm .input .eye .svgEyeLash {
+    display: none;
+}
+
+.rotate-svg {
+    transform: rotate(0deg) !important;
+}
+
+.profile-modal .modal-content .pass-confirm .input input::-ms-reveal {
+    display: none;
+}
+
+.profile-modal .modal-content .pass-confirm form input[type="submit"] {
+    padding: 10px 20px;
+    background-color: var(--color-1);
+    color: var(--color-icon);
+    font-family: var(--fuente);
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 15px;
+    transition: .25s ease;
+}
+
+.profile-modal .modal-content .pass-confirm form input[type="submit"]:hover {
+    box-shadow: 2px 2px var(--color-2);
+    transform: translate(-2px, -2px);
+    text-shadow: 1px 1px 2px var(--color-4);
 }
