--- a/panel/styles/max-sidebar.css
+++ b/panel/styles/max-sidebar.css
@@ -1,7 +1,7 @@
 @import url('../../styles/root.css');
 
 .blur-max-sidebar {
-    position: relative;
+    position: fixed;
     width: 100%;
     height: 100vh;
     background-color: var(--blur-color);
@@ -47,6 +47,14 @@
     background-color: #ccc;
     transform: translate(-2px, -2px);
     box-shadow: 2px 2px var(--color-5);
+}
+
+.max-sidebar .close-sidebar svg {
+    transition: transform .35s ease;
+}
+
+.max-sidebar .close-sidebar:hover > svg {
+    transform: rotate(180deg);
 }
 
 .max-sidebar .user-profile {
@@ -104,7 +112,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    padding: 5px 0;
+    justify-content: flex-start;
+    overflow-y: scroll;
+    max-height: 33%;
 }
 
 .max-sidebar .dropdowns::-webkit-scrollbar {
@@ -122,6 +133,7 @@
 .max-sidebar .dropdowns .dropdown {
     display: flex;
     cursor: pointer;
+    z-index: 20;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -129,7 +141,6 @@
     width: 85%;
     background-color: var(--color-icon);
     border-radius: 15px;
-    margin-bottom: 10px;
     transition: .25s ease;
 }
 
@@ -159,9 +170,74 @@
 .max-sidebar .dropdowns .dropdown .arrow-down svg {
     width: 40px;
     height: 40px;
+    transition: .25s ease;
 }
 
 .max-sidebar .dropdowns .dropdown:hover {
+    transform: translate(-3px, -3px);
+    box-shadow: 3px 3px var(--color-5);
+    background-color: #ccc;
+}
+
+.dropdown-active {
+    transform: translate(-3px, -3px);
+    box-shadow: 3px 0 var(--color-5);
+    background-color: #ccc;
+    border-radius: 15px 15px 0 0 !important;
+}
+
+.max-sidebar .dropdowns .dropdown-content {
+    width: 85%;
+    background-color: #E5E5E5;
+    margin-bottom: 10px;
+    display: flex;
+    z-index: 10;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0 0 15px 15px;
+    transition: .25s ease;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height .25s ease;
+}
+
+.dropdown-content-active {
+    overflow: visible !important;
+    transform: translate(-3px, -3px);
+    box-shadow: 3px 0 var(--color-5);
+    background-color: #ccc;
+    border-radius: 0 0 15px 15px !important;
+}
+
+.max-sidebar .dropdowns .dropdown-content .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    margin: 10px 20px;
+}
+
+.max-sidebar .dropdowns .dropdown-content .content a {
+    text-decoration: none;
+    font-family: var(--fuente);
+    color: #000;
+    width: 80%;
+    text-align: center;
+    padding: 10px 20px;
+    background-color: var(--color-icon);
+    border-radius: 15px;
+    margin-bottom: 10px;
+    transition: .25s ease;
+}
+
+.max-sidebar .dropdowns .dropdown-content .content a:last-child {
+    margin-bottom: 0;
+}
+
+.max-sidebar .dropdowns .dropdown-content .content a:hover {
     transform: translate(-3px, -3px);
     box-shadow: 3px 3px var(--color-5);
     background-color: #ccc;
@@ -177,7 +253,6 @@
     width: 85%;
     background-color: var(--color-icon);
     border-radius: 15px;
-    margin-bottom: 10px;
     transition: .25s ease;
     text-decoration: none;
     color: #000;
