--- a/modulos/Modulo Mascota/Mascota.css
+++ b/modulos/Modulo Mascota/Mascota.css
@@ -31,7 +31,7 @@
 .contenedor h1{
     text-align: center;
 }
-.contenedor-propietario{
+.contenedor-mascota{
     background:var(--segundario);
     margin: 60px;
     border-radius: 10px;
@@ -40,7 +40,7 @@
     align-items: center;
     justify-content: space-between;
 }
-.man{
+.mascota{
     background:var(--primario);
     width: 100px;
     display: flex;
@@ -51,32 +51,19 @@
     margin: 30px;
     
 }
-.man-color svg{
-    width: 30px;
-}
-.woman{
-    background:var(--primario);
-    width: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
-    border-radius: 50%;
-    margin: 30px;
+.mascota-color svg{
+    width: 80px;
     
 }
-.woman-color svg{
-    width: 40px;
-}
-.woman-color svg path{
+.mascota-color svg path{
     stroke: var(--cuarto);
     fill: var(--cuarto);
 }
-.man-color svg path{
+/*.logo svg path{
     stroke: var(--cuarto);
     fill: var(--cuarto);
-}
-.info-propietario{
+}*/
+.info-mascota{
     left: 15%;
     position:absolute;
 }
@@ -90,15 +77,14 @@
     top:0; 
     margin-left: 50%;
 }
-
+.barra-busqueda svg path{
+    stroke: white;
+    fill: white;
+}
 .busqueda svg{
     background: var(--primario);
     width: 44px;
     height: 44px;
     align-items: center;
     margin: 10px; 
-}
-.barra-busqueda svg path{
-    stroke: white;
-    fill: white;
 }
