--- a/modulos/ModuloEmpleado/Moduloempleado.css
+++ b/modulos/ModuloEmpleado/Moduloempleado.css
@@ -31,7 +31,7 @@
 .contenedor h1{
     text-align: center;
 }
-.contenedor-propietario{
+.contenedor-empleado{
     background:var(--segundario);
     margin: 60px;
     border-radius: 10px;
@@ -40,7 +40,7 @@
     align-items: center;
     justify-content: space-between;
 }
-.man{
+.empleado{
     background:var(--primario);
     width: 100px;
     display: flex;
@@ -51,32 +51,20 @@
     margin: 30px;
     
 }
-.man-color svg{
-    width: 30px;
-}
-.woman{
-    background:var(--primario);
-    width: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
-    border-radius: 50%;
-    margin: 30px;
+.mascota-color svg{
+    width: 70px;
+    height: 70px;
     
 }
-.woman-color svg{
-    width: 40px;
-}
-.woman-color svg path{
+.mascota-color svg path{
     stroke: var(--cuarto);
     fill: var(--cuarto);
 }
-.man-color svg path{
+/*.logo svg path{
     stroke: var(--cuarto);
     fill: var(--cuarto);
-}
-.info-propietario{
+}*/
+.info-empleado{
     left: 15%;
     position:absolute;
 }
@@ -84,21 +72,21 @@
     position: relative;
 }
 .barra-busqueda{
-    left: 70%;
+    left: 30%;
     width: 30%;
     display: flex;
     top:0; 
     margin-left: 50%;
-}
-
-.busqueda svg{
-    background: var(--primario);
-    width: 44px;
-    height: 44px;
-    align-items: center;
-    margin: 10px; 
+    
 }
 .barra-busqueda svg path{
     stroke: white;
     fill: white;
+}
+.busqueda svg{
+    background: var(--primario);
+    width: 50px;
+    height: 44px;
+    align-items: center;
+    margin: 10px; 
 }
