--- a/panel/modules/profileModal/styles.css
+++ b/panel/modules/profileModal/styles.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: transparent;
+    background-color: var(--color-4);
     padding: 20px;
 }
 
