--- a/panel/styles/min-buscador.css
+++ b/panel/styles/min-buscador.css
@@ -2,6 +2,8 @@
 
 .min-buscador-container {
     min-height: 100px;
+    z-index: 5;
+    position: fixed;
     height: 125px;
     max-height: 125px;
     width: 100%;
@@ -23,7 +25,12 @@
 }
 
 .min-buscador-container .min-buscador:hover {
-    opacity: .7;
+    opacity: .9;
+    transform: translate(-2px, -2px);
+}
+
+.min-buscador-container .min-buscador:hover > .input-sim, .min-buscador-container .min-buscador:hover > .icon {
+    box-shadow:2px 2px var(--color-4);
 }
 
 .min-buscador-container .min-buscador .input-sim {
@@ -32,11 +39,13 @@
     background-color: var(--color-icon);
     border-radius: 40px 0 0 40px;
     border: 4px solid var(--color-1);
+    transition: .25s ease;
 }
 
 .min-buscador-container .min-buscador .icon {
     min-width: 10%;
     width: 10%;
+    transition: .25s ease;
     max-width: 12%;
     height: 70px;
     background-color: var(--color-1);
