--- a/panel/styles/max-sidebar.css
+++ b/panel/styles/max-sidebar.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100vh;
     background-color: var(--blur-color);
+    backdrop-filter: blur(3px);
     right: -100%;
     transition: right .5s ease;
     z-index: 25;
