--- a/panel/styles/min-buscador.css
+++ b/panel/styles/min-buscador.css
@@ -1,11 +1,8 @@
 @import url('../../styles/root.css');
 
 .min-buscador-container {
-    min-height: 100px;
     z-index: 5;
-    position: fixed;
-    height: 125px;
-    max-height: 125px;
+    height: 15vh;
     width: 100%;
     display: flex;
     justify-content: center;
