--- a/panel/modules/ModuloServicios/styles.css
+++ b/panel/modules/ModuloServicios/styles.css
@@ -31,7 +31,7 @@
     align-items: center;
     cursor: pointer;
     transition: .25s ease;
-    border-radius: 10px;
+    border-radius: 0 0 10px 10px;
 }
 
 .icons .icon:hover {
