--- a/panel/modules/Modulo Mascota/Informacion Mascota/informacionmascota.css
+++ b/panel/modules/Modulo Mascota/Informacion Mascota/informacionmascota.css
@@ -90,3 +90,9 @@ p{
 .botones svg path{
     fill:var(--cuarto);
 }
+.botones a{
+    text-decoration: none;
+    display: flex;
+    color: white;
+    
+}
