--- a/panel/modules/ModuloServicios/styles.css
+++ b/panel/modules/ModuloServicios/styles.css
@@ -36,8 +36,8 @@
 
 .icons .icon:hover {
     background-color: var(--color-3);
-    transform: translate(-2px, -2px) scale(1.1);
-    box-shadow: 2px 2px var(--color-icon);
+    transform:  scale(1.06);
+    box-shadow: 0 2px var(--color-icon);
 }
 
 .icons .icon svg {
@@ -105,6 +105,13 @@
     padding: 20px 20px;
     margin-bottom: 15px;
     border-radius: 20px;
+    transition: .25s ease;
+}
+
+.container .content .list .list-item:hover {
+    background-color: var(--color-3);
+    transform: translate(-4px, -4px);
+    box-shadow: 4px 4px var(--color-1);
 }
 
 .container .content .list .list-item:last-child {
@@ -137,9 +144,9 @@
 }
 
 .container .content .list .list-item .actions a:hover {
-    background-color: var(--blur-color);
+    background-color: var(--color-5);
     transform: translate(-2px, -2px);
-    box-shadow: 2px 2px var(--color-4);
+    box-shadow: 2px 2px var(--color-1);
 }
 
 .container .content .list .list-item .actions a:last-child {
