--- a/panel/modules/welcome/styles.css
+++ b/panel/modules/welcome/styles.css
@@ -39,3 +39,10 @@ body {
     margin-top: 30px;
     font-size: 25px;
 }
+
+
+@media screen and (max-width: 1400px) {
+    .welcome-content p {
+        font-size: 20px;
+    }
+}
