--- a/panel/styles/max-sidebar.css
+++ b/panel/styles/max-sidebar.css
@@ -97,6 +97,8 @@
     background-color: var(--color-icon);
     padding: 10px 20px;
     margin-top: 10px;
+    max-width: 80%;
+    text-align: center;
     border-radius: 15px;
     display: flex;
     flex-direction: column;
@@ -322,7 +324,7 @@
     }
 
     .max-sidebar .dropdowns {
-        max-height: 30%;
+        max-height: 25%;
         margin-top: 10px;
     }
 }
