--- a/panel/modules/profileModal/styles.css
+++ b/panel/modules/profileModal/styles.css
@@ -3,6 +3,7 @@
 .mensaje {
     position: absolute;
     min-width: 300px;
+    top: -200px;
     max-width: 500px;
     background-color: var(--bad);
     border-radius: 10px;
@@ -12,8 +13,13 @@
     margin: 10px auto;
     display: flex;
     flex-direction: row;
+    transition: .25s ease;
     align-items: center;
     justify-content: space-between;
+}
+
+.mensaje-active {
+    top: 0 !important;
 }
 
 .mensaje p {
