--- a/panel/modules/imgModule/styles.css
+++ b/panel/modules/imgModule/styles.css
@@ -48,3 +48,20 @@
     margin-top: 50px;
     font-family: var(--fuente);
 }
+
+.container .img-list {
+    display: flex;
+    flex-direction: row;
+}
+
+.container .img-list .img {
+    width: 100px;
+    height: 100px;
+}
+
+.container .img-list .img img {
+    width: 100%;
+    object-fit: contain;
+    border-radius: 20px;
+    height: 100%;
+}
