--- a/panel/modules/ModuloPropietario/styles.css
+++ b/panel/modules/ModuloPropietario/styles.css
@@ -1,4 +1,4 @@
-@import url("../../../styles/root.css");
+@import url("styles/root.css");
 
 .container {
     width: 100%;
@@ -11,7 +11,7 @@
 }
 
 .icons {
-    width: 100px;
+    width: 200px;
     display: flex;
     flex-direction: row;
     position: absolute;
