--- a/panel/modules/ModuloRoles/styles.css
+++ b/panel/modules/ModuloRoles/styles.css
@@ -97,7 +97,6 @@
 
 .container .content .list .list-item {
     background-color: var(--color-2);
-
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -109,50 +108,19 @@
     transition: .25s ease;
 }
 
-.container .content .list .list-item .data {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-
-.container .content .list .list-item .data h2 {
-    font-family: var(--fuente);
-    font-size: 30px;
-    margin-left: 20px;
-}
-
-.container .content .list .list-item .data p {
-    font-family: var(--fuente);
-    font-size: 20px;
-    margin-left: 20px;
-}
-
-.container .content .list .list-item .data img {
-    width: 200px;
-    height: 200px;
-    background-color: var(--color-icon);
-    object-fit: cover;
-    border-radius: 50%;
-    margin: 0;
-    border: 8px solid var(--color-icon);
-    transition: .25s ease;
-}
-
 .container .content .list .list-item:hover {
     background-color: var(--color-3);
     transform: translate(-4px, -4px);
     box-shadow: 4px 4px var(--color-1);
 }
 
-.container .content .list .list-item:hover > .data img{
-    border: 0.1px solid var(--color-1);
-    transform: translate(-4px, -4px);
-    box-shadow: 4px 4px var(--color-1);
-}
-
 .container .content .list .list-item:last-child {
     margin-bottom: 0;
+}
+
+.container .content .list .list-item h2 {
+    font-family: var(--fuente);
+    font-size: 30px;
 }
 
 .container .content .list .list-item .actions {
