--- a/panel/modules/ModuloServicios/styles.css
+++ b/panel/modules/ModuloServicios/styles.css
@@ -90,7 +90,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-x: hidden;
     width: 80%;
     padding: 10px;
 }
