--- a/styles.css
+++ b/styles.css
@@ -94,9 +94,9 @@ body {
 .separador {
     z-index: 20;
     width: 100%;
-    height: 400px;
+    height: 200px;
     background: rgb(35,28,140);
-    background: linear-gradient(180deg, rgba(35,28,140,1) 0%, rgba(100,97,173,1) 60%, rgba(157,163,235,1) 100%);
+    background: linear-gradient(180deg, rgba(35,28,140,1) 0%, rgba(100,97,173,1) 50%, rgba(157,163,235,1) 100%);
 }
 
 .descripcion {
@@ -111,7 +111,7 @@ body {
 }
 
 .descripcion p {
-    
+    margin-bottom: 50px;
     font-size: 40px;
     width: 50%;
     text-align: center;
