--- a/panel/modules/ModuloEmpleado/add/styles.css
+++ b/panel/modules/ModuloEmpleado/add/styles.css
@@ -307,7 +307,7 @@
 .container .data {
     width: 80%;
     overflow-x: hidden;
-    padding: 10px;
+    padding: 20px;
 }
 
 .container .data::-webkit-scrollbar {
@@ -323,6 +323,18 @@
     background-color: var(--color-4);
     border-radius: 20px;
     border: 1.5px solid #000;
+}
+
+.container .data::-webkit-scrollbar-button:start:increment {
+    height: 70px;
+    display: block;
+    background-color: transparent;
+}
+
+.container .data::-webkit-scrollbar-button:end:increment {
+    height: 70px;
+    display: block;
+    background-color: transparent;
 }
 
 .container .data form {
@@ -425,6 +437,21 @@
 }
 
 .container .data form .inputs .input input:focus {
+    outline: 4px solid var(--color-1);
+}
+
+.container .data  form .inputs .input select {
+    padding: 10px 20px;
+    outline: none;
+    border-radius: 10px;
+    border: none;
+    max-width: 100%;
+    font-family: var(--fuente);
+    font-size: 18px;
+    transition: .25s ease;
+}
+
+.container .data form .inputs .input select:focus {
     outline: 4px solid var(--color-1);
 }
 
