--- a/panel/modules/ModuloRoles/add/styles.css
+++ b/panel/modules/ModuloRoles/add/styles.css
@@ -213,6 +213,44 @@
     
 }
 
+.container .data form .checks {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 20px;
+    font-size: 12px;
+    width: 100%;
+}
+
+.container .data form .checks .mod {
+    display: flex;
+    flex-direction: row;
+    background-color: var(--color-icon);
+    color: #000;
+    font-family: var(--fuente);
+    padding: 10px 20px;
+    align-items: center;
+    justify-content: space-around;
+    border-radius: 10px;
+    transition: .25s ease;
+    width: 28%;
+    cursor: pointer;
+}
+
+.container .data form .checks .mod svg {
+    width: 20px;
+}
+
+.container .data form .checks .mod .check {
+    display: none;
+}
+
+.container .data form .checks .mod:hover {
+    background-color: var(--color-2);
+    transform: translate(-2px, -2px);
+    box-shadow: 2px 2px var(--color-4);
+}
+
 @media screen and (max-width: 1400px) {
     .container .data {
         width: 95%;
