--- a/panel/modules/ModuloEmpleado/update/styles.css
+++ b/panel/modules/ModuloEmpleado/update/styles.css
@@ -1,24 +1,473 @@
 @import url("../../../../styles/root.css");
 
-.container {
-    width: 100%;
-    height: 100vh;
+.mensaje {
+    position: absolute;
+    min-width: 300px;
+    top: -200px;
+    max-width: 500px;
+    background-color: var(--bad);
+    border-radius: 10px;
+    padding: 10px 20px;
+    left: 0;
+    right: 0;
+    z-index: 200;
+    margin: 10px auto;
     display: flex;
-    justify-content: center;
-    background-color: var(--color-4);
-    position: relative;
+    flex-direction: row;
+    transition: .25s ease;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.container .content {
-    margin-top: 100px;
-    width: 80%;
+.mensaje-active {
+    top: 0 !important;
+}
+
+.mensaje-active-ok {
+    top: 0 !important;
+    background-color: var(--correct);
+}
+
+.mensaje-active-ok .mensaje p {
+    color: #000;
+}
+
+.mensaje-active-bad {
+    top: 0 !important;
+    background-color: rgb(236, 33, 33);
+}
+
+.mensaje-active-bad p {
+    color: var(--color-icon) !important;
+}
+
+.mensaje p {
+    color: var(--color-icon);
+    font-family: var(--fuente);
+}
+
+.mensaje .icon {
+    background-color: #000;
+    width: 40px;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    height: 40px;
+    transition: .25s ease;
+}
+
+.mensaje .icon:hover {
+    background-color: var(--color-1);
+    box-shadow: 2px 2px var(--color-4);
+    transform: translate(-2px, -2px);
+}
+
+.mensaje .icon:hover > svg {
+    transform: rotate(90deg);
+}
+
+.mensaje .icon svg {
+    width: 100%;
+    transition: .25s ease;
+    height: 100%;
+}
+
+.mensaje .icon svg path {
+    fill: var(--color-icon);
+}
+
+.img-select-modal {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 100;
+    background-color: var(--blur-color);
+    backdrop-filter: blur(5px);
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.img-select-modal .content {
+    width: 60%;
+    max-height: 60%;
+    overflow: hidden;
+    background-color: var(--color-4);
+    padding: 10px;
+    border-radius: 10px;
     display: flex;
-    height: calc(100% - 100px);
+    transition: .25s ease;
     flex-direction: column;
     align-items: center;
 }
 
-.container .content iframe {
+.img-select-modal .content h2 {
+    font-family: var(--fuente);
+    color: #000;
+    margin: 10px 0 20px;
+}
+
+.img-select-modal .content .imagenes {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    width: 90%;
+    overflow-x: hidden;
+    border-radius: 10px 5px 5px 10px;
+    padding: 20px;
+    border: 4px solid var(--color-icon);
+    grid-gap: 10px 5px;
+    margin: auto;
+}
+
+.img-select-modal .content .imagenes::-webkit-scrollbar {
+    width: 8px;
+    background-color: var(--color-1);
+    border-radius: 20px;
+}
+
+.img-select-modal .content .imagenes::-webkit-scrollbar-thumb {
+    background-color: var(--color-4);
+    border-radius: 20px;
+    border: 1.5px solid #000;
+}
+
+.img-select-modal .content .imagenes .imagen {
+    width: 200px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    border-radius: 20px;
+    position: relative;
+}
+
+.img-select-modal .content .imagenes .imagen .icon {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
+    background-color: var(--blur-color);
+    backdrop-filter: blur(5px);
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: .25s ease;
+    cursor: pointer;
+    border: 4px solid transparent;
+}
+
+.icon-active {
+    opacity: 1 !important;
+    border: 4px solid var(--correct) !important;
+}
+
+.img-select-modal .content .imagenes .imagen .icon:hover {
+    opacity: 1;
+}
+
+.img-select-modal .content .imagenes .imagen .icon svg {
+    width: 80px;
+    height: 80px;
+}
+
+.img-select-modal .content .imagenes .imagen .icon svg path {
+    fill: var(--color-icon);
+    transition: .25s ease;
+}
+
+.img-select-modal .content .imagenes .imagen .icon-active svg path {
+    fill: var(--correct);
+}
+
+.img-select-modal .content .imagenes .imagen img {
+    width: 100%;
+    object-fit: contain;
+    height: 100%;
+    border-radius: 20px;
+}
+
+.img-select-modal .content .actions {
+    display: flex;
+    margin: 20px 0 10px;
+    flex-direction: row;
+}
+
+.img-select-modal .content .cancel {
+    cursor: pointer;
+    background-color: var(--bad);
+    border: 3px solid var(--bad);
+    outline: none;
+    font-family: var(--fuente);
+    padding: 10px 20px;
+    font-size: 18px;
+    color: var(--color-icon);
+    margin-right: 10px;
+    border-radius: 10px;
+    transition: .25s ease;
+}
+
+.img-select-modal .content .cancel:hover {
+    transform: translate(-2px, -2px);
+    box-shadow: 2px 2px var(--color-1);
+    background-color: var(--bad);
+}
+
+.img-select-modal .content .select {
+    cursor: no-drop;
+    background-color: rgba(172, 172, 172, 0.822);
+    border: 3px solid rgba(88, 88, 88, 0.514);
+    outline: none;
+    font-family: var(--fuente);
+    padding: 10px 20px;
+    font-size: 18px;
+    color: var(--color-icon);
+    margin-right: 10px;
+    border-radius: 10px;
+    transition: .25s ease;
+}
+
+.img-select-modal .content .select-active {
+    background-color: var(--correct);
+    border: 3px solid var(--correct);
+    cursor: pointer !important;
+}
+
+.img-select-modal .content .select-active:hover {
+    transform: translate(-2px, -2px);
+    box-shadow: 2px 2px var(--color-1);
+    background-color: var(--correct);
+}
+
+.container {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--color-4);
+    display:  flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.container .user-img {
+    width: 200px;
+    border-radius: 50%;
+    height: 200px;
+    border: 6px solid var(--color-1);
+    margin-bottom: 40px;
+    position: relative;
+    background-color: var(--color-icon);
+}
+
+.container .user-img img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.container .user-img .cam-icon {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: contain;
+    top: -6px;
+    left: -6px;
+    background-color: var(--blur-color);
+    backdrop-filter: blur(5px);
+    opacity: 0;
+    border: 8px solid var(--color-icon);
+    cursor: pointer;
+    transition: .25s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container .user-img .cam-icon svg path {
+    fill: var(--color-icon);
+}
+
+.container .user-img .cam-icon:hover {
+    opacity: 1;
+}
+
+.container .user-img .cam-icon svg {
+    width: 100px;
+    height: 100px;
+}
+
+.container .data {
+    width: 80%;
+    overflow-x: hidden;
+    padding: 10px;
+}
+
+.container .data::-webkit-scrollbar {
+    width: 8px;
+}
+
+.container .data::-webkit-scrollbar-track-piece {
+    background-color: var(--color-1);
+    border-radius: 20px;
+}
+
+.container .data::-webkit-scrollbar-thumb {
+    background-color: var(--color-4);
+    border-radius: 20px;
+    border: 1.5px solid #000;
+}
+
+.container .data::-webkit-scrollbar-button:start:increment {
+    height: 70px;
+    display: block;
+    background-color: transparent;
+}
+
+.container .data form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.container .data form .inputs{
+    display: grid;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px 15px;
+    justify-content: center;
+}
+
+.container .data form .inputs .input .inputPass {
+    display: flex;
+    flex-direction: row;
+}
+
+.container .data .inputs .input .inputPass input {
+    width: 85%;
+    border-radius: 10px 0 0 10px;
+}
+
+.container .data .inputs .input .inputPass input:focus, .container .data .inputs .input .inputPass input:focus ~ .eye {
+    outline: 4px solid var(--color-1);
+}
+
+.container .data form .inputs .input .inputPass .eye {
+    background-color: var(--color-1);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0 10px 10px 0;
+    min-width: 15%;
+    transition: .25s ease;
+}
+
+.container .data form .inputs .input .inputPass .eye button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    padding: 0 10px;
+    cursor: pointer;
+}
+
+.container .data form .inputs .input .inputPass .eye svg {
+    stroke: var(--color-icon);
+    width: 30px;
+    transform: rotate(40deg);
+    transition: .25s ease;
+}
+
+.container .data form .inputs .input .inputPass .eye svg path, .container .data form .inputs.input .inputPass .eye .svgEyeLash svg path {
+    fill: var(--color-icon);
+    width: 100%;
+}
+
+.container .data form .inputs .input .inputPass .eye .svgEyeLash {
+    display: none;
+}
+
+.rotate-svg {
+    transform: rotate(0deg) !important;
+}
+
+.container .data form .inputs .input input::-ms-reveal {
+    display: none;
+}
+
+.container .data form .inputs .input {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.container .data form .inputs .input label {
+    font-family: var(--fuente);
+    font-size: 20px;
+    margin-bottom: 5px;
+}
+
+.container .data  form .inputs .input input {
+    padding: 10px 20px;
+    outline: none;
+    border-radius: 10px;
+    border: none;
+    max-width: 100%;
+    font-family: var(--fuente);
+    font-size: 18px;
+    transition: .25s ease;
+}
+
+.container .data form .inputs .input input:focus {
+    outline: 4px solid var(--color-1);
+}
+
+.container .data form input[type="submit"] {
+    padding: 10px 20px;
+    outline: none;
+    border: none;
+    background-color: var(--color-1);
+    cursor: pointer;
+    border-radius: 10px;
+    font-family: var(--fuente);
+    font-size: 20px;
+    color: var(--color-icon);
+    margin-top: 20px;
+    transition: .25s ease;
+}
+
+.container .data form input[type="submit"]:hover {
+    background-color: var(--color-2);
+    transform: translate(-2px, -2px);
+    box-shadow: 2px 2px var(--color-1);
+}
+
+@media screen and (max-width: 1400px) {
+    .container .data {
+        width: 95%;
+    }
+
+    .container .data  form .inputs .input input {
+        max-width: 100%;
+    }
+
+    .container .data form .inputs {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .img-select-modal .content .imagenes {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
