--- a/panel/styles/max-buscador.css
+++ b/panel/styles/max-buscador.css
@@ -28,6 +28,15 @@
     transition: .25s ease;
 }
 
+.max-buscador-container .max-buscador form {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+}
+
 .max-buscador-container .max-buscador .input {
     width: 100%;
     display: flex;
