--- a/panel/modules/ModuloEmpleado/update/styles.css
+++ b/panel/modules/ModuloEmpleado/update/styles.css
@@ -232,6 +232,35 @@
     transition: .25s ease;
 }
 
+.container .data  form .inputs .input select {
+    padding: 10px 20px;
+    outline: none;
+    border-radius: 10px;
+    border: none;
+    max-width: 100%;
+    font-family: var(--fuente);
+    font-size: 18px;
+    transition: .25s ease;
+}
+
+.container .data form .inputs .input select:focus {
+    outline: 4px solid var(--color-1);
+}
+
+.container .data form input[type="submit"] {
+    padding: 10px 20px;
+    outline: none;
+    border: none;
+    background-color: var(--color-1);
+    cursor: pointer;
+    border-radius: 10px;
+    font-family: var(--fuente);
+    font-size: 20px;
+    color: var(--color-icon);
+    margin-top: 20px;
+    transition: .25s ease;
+}
+
 .img-select-modal .content .select-active {
     background-color: var(--correct);
     border: 3px solid var(--correct);
